--- a/CMS/project_data.JSON
+++ b/CMS/project_data.JSON
@@ -2,28 +2,28 @@
   "Project": [
     {
       "projectCode": "",
-      "projectName": ""
+      "projectName": "12321"
     }
   ],
   "Devices": [
     {
       "projectCode": "",
-      "deviceCode": "12314",
-      "lv1name": "0",
-      "lv2name": "0",
-      "lv3name": "0",
-      "lv4name": "0",
-      "lv1Code": 0,
-      "lv2Code": 0,
-      "lv3Code": 0,
-      "lv4Code": 0,
+      "deviceCode": "asdas",
+      "lv1name": "12312",
+      "lv2name": "22",
+      "lv3name": "ssd",
+      "lv4name": "qqwe",
+      "lv1Code": "1222",
+      "lv2Code": "222ss",
+      "lv3Code": "ffff",
+      "lv4Code": "asdas",
       "cabinet": 0,
       "date": 0,
-      "deviceType": "1k3p"
+      "deviceType": "6k1p"
     },
     {
       "projectCode": "",
-      "deviceCode": "111sdad4",
+      "deviceCode": "asdasdaasdas",
       "lv1name": "0",
       "lv2name": "0",
       "lv3name": "0",
@@ -34,40 +34,40 @@
       "lv4Code": 0,
       "cabinet": 0,
       "date": 0,
-      "deviceType": "1k3p"
+      "deviceType": "12k3p"
     }
   ],
   "Channels": [
     {
-      "deviceID": "12314",
+      "deviceID": "asdas",
       "loadId": 0,
-      "itt": "12312",
-      "ptt": "12321",
-      "ct": "13",
+      "itt": "asda",
+      "ptt": "asdasd",
+      "ct": "asda",
       "type": 0,
-      "name": "hdhuejdi",
+      "name": "aqwewqeqw",
       "source": false,
-      "lv1name": "0",
-      "lv2name": "0",
+      "lv1name": "asdasd",
+      "lv2name": "asd",
       "lv3name": "0",
       "lv4name": "0",
-      "lv1Code": 0,
-      "lv2Code": 0,
+      "lv1Code": "asdasd",
+      "lv2Code": "asd",
       "lv3Code": 0,
       "lv4Code": 0,
       "includeS": false,
       "includeL": false,
       "sourceFr": false,
-      "chonch": "P1"
+      "chonch": "A16"
     },
     {
-      "deviceID": "12314",
+      "deviceID": "asdas",
       "loadId": 1,
-      "itt": "12313",
-      "ptt": "12321",
-      "ct": "234",
-      "type": "324",
-      "name": "Vịt Vụng Về",
+      "itt": "asdasd",
+      "ptt": "adsad",
+      "ct": 0,
+      "type": 0,
+      "name": "asdasda",
       "source": false,
       "lv1name": "0",
       "lv2name": "0",
@@ -80,51 +80,98 @@
       "includeS": false,
       "includeL": false,
       "sourceFr": false,
-      "chonch": "P2"
+      "chonch": "A13"
     },
     {
-      "deviceID": "12314",
-      "loadId": 2,
-      "itt": "0",
-      "ptt": "1231",
-      "ct": "0",
-      "type": "sqewewq",
-      "name": "01111",
+      "deviceID": "asdasdaasdas",
+      "loadId": 0,
+      "itt": "asdasd",
+      "ptt": 0,
+      "ct": 0,
+      "type": 0,
+      "name": "saaaaa",
       "source": false,
-      "lv1name": "0",
-      "lv2name": "0",
+      "lv1name": "12312",
+      "lv2name": "22",
       "lv3name": "0",
       "lv4name": "0",
-      "lv1Code": 0,
-      "lv2Code": 0,
+      "lv1Code": "1222",
+      "lv2Code": "222ss",
       "lv3Code": 0,
       "lv4Code": 0,
       "includeS": false,
       "includeL": false,
       "sourceFr": false,
-      "chonch": "P3"
+      "chonch": "A42",
+      "pha": "A"
     },
     {
-      "deviceID": "111sdad4",
-      "loadId": 2,
-      "itt": 100,
-      "ptt": "1231",
-      "ct": "0",
-      "type": "sqewewq",
-      "name": "01111",
+      "deviceID": "asdasdaasdas",
+      "loadId": 0,
+      "itt": "asdasd",
+      "ptt": 0,
+      "ct": 0,
+      "type": 0,
+      "name": "saaaaa",
       "source": false,
-      "lv1name": "0",
+      "lv1name": "12312",
+      "lv2name": "22",
+      "lv3name": "0",
+      "lv4name": "0",
+      "lv1Code": "1222",
+      "lv2Code": "222ss",
+      "lv3Code": 0,
+      "lv4Code": 0,
+      "includeS": false,
+      "includeL": false,
+      "sourceFr": false,
+      "chonch": "A52",
+      "pha": "B"
+    },
+    {
+      "deviceID": "asdasdaasdas",
+      "loadId": 0,
+      "itt": "asdasd",
+      "ptt": 0,
+      "ct": 0,
+      "type": 0,
+      "name": "saaaaa",
+      "source": false,
+      "lv1name": "12312",
+      "lv2name": "22",
+      "lv3name": "0",
+      "lv4name": "0",
+      "lv1Code": "1222",
+      "lv2Code": "222ss",
+      "lv3Code": 0,
+      "lv4Code": 0,
+      "includeS": false,
+      "includeL": false,
+      "sourceFr": false,
+      "chonch": "A62",
+      "pha": "C"
+    },
+    {
+      "deviceID": "asdasdaasdas",
+      "loadId": 1,
+      "itt": "adasdsa",
+      "ptt": "asdsadas",
+      "ct": 0,
+      "type": 0,
+      "name": "asdas",
+      "source": false,
+      "lv1name": "12312",
       "lv2name": "0",
       "lv3name": "0",
       "lv4name": "0",
-      "lv1Code": 0,
+      "lv1Code": "1222",
       "lv2Code": 0,
       "lv3Code": 0,
       "lv4Code": 0,
       "includeS": false,
       "includeL": false,
       "sourceFr": false,
-      "chonch": "P3"
+      "chonch": "A15"
     }
   ]
 }
